redone layouts, attempted to thread image fetchin
image fetching has threading issues, code is commented.

--- a/o3o/App.xaml
+++ b/o3o/App.xaml
@@ -1,7 +1,5 @@
 ﻿<Application x:Class="o3o.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             ><!--StartupUri="MainWindow.xaml"-->
-
-
+             StartupUri="MainWindow1.xaml">
 </Application>
