--- a/o3o/TweetElement.xaml
+++ b/o3o/TweetElement.xaml
@@ -38,9 +38,10 @@
             <TextBlock.ContextMenu>
                 <ContextMenu x:Name="contextmenu">
             <MenuItem Header="copy" Click="MenuItem_Click"/>
-        </ContextMenu></TextBlock.ContextMenu><TextBlock.Effect>
+        </ContextMenu></TextBlock.ContextMenu>
+            <!--<TextBlock.Effect>
                     <DropShadowEffect ShadowDepth="1" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
-                </TextBlock.Effect>
+                </TextBlock.Effect>-->
         </TextBlock>
         <TextBlock Text="Label" Height="20" HorizontalAlignment="Left" Margin="113, 87, 0, 0" Name="label1" VerticalAlignment="Top" Foreground="#C2000000" Padding="0,1,0,0" Width="286" ForceCursor="True">
         </TextBlock>
